Bug 16203: double-click drag should do selection in "word-by-word" mode. r+sr=roc